@@ -2,6 +2,7 @@ package uk.gov.moj.cpp.hearing.test.matchers;
 
 import static org.hamcrest.CoreMatchers.is;
 
+import java.io.IOException;
 import java.lang.reflect.Constructor;
 import java.lang.reflect.InvocationHandler;
 import java.lang.reflect.Method;
@@ -13,8 +14,10 @@ import java.util.List;
 import java.util.Optional;
 import java.util.function.Function;
 
-import net.sf.cglib.proxy.Enhancer;
-import net.sf.cglib.proxy.MethodInterceptor;
+import net.bytebuddy.ByteBuddy;
+import net.bytebuddy.dynamic.DynamicType;
+import net.bytebuddy.implementation.InvocationHandlerAdapter;
+import net.bytebuddy.matcher.ElementMatchers;
 import org.hamcrest.BaseMatcher;
 import org.hamcrest.Description;
 import org.hamcrest.Matcher;
@@ -33,17 +36,46 @@ public class BeanMatcher<T> extends BaseMatcher<T> {
         this.clazz = clazz;
     }
 
-    public static <T> BeanMatcher<T> isBean(Class<T> clazz) {
-        return new BeanMatcher<>(clazz);
+    public <R> BeanMatcher<T> with(Function<T, R> accessor, Matcher<R> matcher) {
+        assertions.add(new Assertion<>(accessor, matcher));
+        return this;
     }
 
-    public <R> BeanMatcher<T> with(Function<T, R> accessor, Matcher<R> matcher) {
+    public <R> BeanMatcher<T> withOptional(Function<T, Optional<R>> accessor, Matcher<R> underlyingMatcher) {
+        final Matcher<Optional<R>> matcher = new BaseMatcher<Optional<R>>() {
+            @Override
+            public boolean matches(Object o) {
+                return underlyingMatcher.matches(o == null ? null : ((Optional) o).orElse(null));
+            }
+
+            @Override
+            public void describeTo(Description description) {
+                underlyingMatcher.describeTo(description);
+            }
+        };
         assertions.add(new Assertion<>(accessor, matcher));
         return this;
     }
 
     public <R> BeanMatcher<T> withValue(final Function<T, R> accessor, final R value) {
         assertions.add(new Assertion<>(accessor, is(value)));
+        return this;
+    }
+
+    public <R> BeanMatcher<T> withOptionalValue(final Function<T, Optional<R>> accessor, final R value) {
+        final Matcher<R> underlyingMatcher = is(value);
+        final Matcher<Optional<R>> matcher = new BaseMatcher<Optional<R>>() {
+            @Override
+            public boolean matches(Object o) {
+                return underlyingMatcher.matches(o == null ? null : ((Optional) o).orElse(null));
+            }
+
+            @Override
+            public void describeTo(Description description) {
+                underlyingMatcher.describeTo(description);
+            }
+        };
+        assertions.add(new Assertion<>(accessor, matcher));
         return this;
     }
 
@@ -60,15 +92,19 @@ public class BeanMatcher<T> extends BaseMatcher<T> {
             return false;
         }
 
-        final Enhancer enhancer = new Enhancer();
-        enhancer.setSuperclass(clazz);
-        enhancer.setCallback((MethodInterceptor) (obj, method, args, proxy) -> {
-            methodName = method.getName();
-            return method.invoke(item, args);
-        });
+        Class<?> loadedProxyClazz;
+        try (DynamicType.Unloaded<T> unloaded = new ByteBuddy().subclass(clazz).method(ElementMatchers.any())
+                .intercept(InvocationHandlerAdapter.of((proxyArg, method, args) -> {
+                    methodName = method.getName();
+                    return method.invoke(item, args);
+                })).make()) {
+            loadedProxyClazz = unloaded.load(clazz.getClassLoader()).getLoaded();
+        } catch (IOException e) {
+            throw new RuntimeException("Unable to create proxy for class: " + clazz.getName(), e);
+        }
 
         try {
-            final T proxy = (T) create(enhancer, clazz);
+            final T proxy = (T) create(loadedProxyClazz, clazz);
 
             for (final Assertion<T, ?> assertion : assertions) {
                 if (!assertion.getMatcher().matches(assertion.getAccessor().apply(proxy))) {
@@ -84,17 +120,17 @@ public class BeanMatcher<T> extends BaseMatcher<T> {
         return true;
     }
 
-    private Object create(final Enhancer enhancer, final Class<?> theClazz) {
+    private Object create(final Class<?> proxyClazz, final Class<?> theClazz) {
         try {
             //try the default constructor first
-            final Class<?> noArgs[] = {};
+            final Class<?>[] noArgs = {};
             Constructor<?> constructor = null;
             try {
                 constructor = theClazz.getDeclaredConstructor(noArgs);
             } catch (Exception ex) {
             }
             if (constructor != null && Modifier.isPublic(constructor.getModifiers())) {
-                return enhancer.create();
+                return proxyClazz.getDeclaredConstructor().newInstance();
             }
             // try to find a non default constructor
             final Optional<Constructor<?>> nonDefaultConstructor = Arrays.asList(theClazz.getConstructors()).stream()
@@ -107,7 +143,7 @@ public class BeanMatcher<T> extends BaseMatcher<T> {
             for (int done = 0; done < parameters.length; done++) {
                 parameters[done] = getExampleParamValue(paramTypes[done]);
             }
-            return enhancer.create(paramTypes, parameters);
+            return proxyClazz.getDeclaredConstructor(paramTypes).newInstance(parameters);
         } catch (Exception ex) {
             throw new RuntimeException("failed to create a " + theClazz.getCanonicalName(), ex);
         }
@@ -115,21 +151,21 @@ public class BeanMatcher<T> extends BaseMatcher<T> {
 
     private Object getExampleParamValue(Class theClass) {
         if (Integer.TYPE == theClass) {
-            return new Integer(1);
+            return Integer.valueOf(1);
         } else if (Long.TYPE == theClass) {
-            return new Long(1);
+            return Long.valueOf(1);
         } else if (Boolean.TYPE == theClass) {
-            return new Boolean(true);
+            return true;
         } else if (Float.TYPE == theClass) {
-            return new Float(1);
+            return Float.valueOf(1);
         } else if (Double.TYPE == theClass) {
-            return new Double(1);
+            return Double.valueOf(1);
         } else if (Short.TYPE == theClass) {
-            return new Short((short) 1);
+            return Short.valueOf((short) 1);
         } else if (Byte.TYPE == theClass) {
-            return new Byte((byte) 1);
+            return Byte.valueOf(((byte) 1));
         } else if (Character.TYPE == theClass) {
-            return new Character('a');
+            return Character.valueOf(('a'));
         } else {
             return null;
         }
@@ -157,6 +193,7 @@ public class BeanMatcher<T> extends BaseMatcher<T> {
             descriptionWrapper.appendText(".").appendText(this.methodName).appendText("()").appendDescriptionOf(this.failedAssertion.getMatcher());
         }
     }
+
 
     @Override
     public void describeMismatch(Object item, Description description) {
@@ -200,7 +237,7 @@ public class BeanMatcher<T> extends BaseMatcher<T> {
                 if (!(args[0] instanceof BeanMatcher || args[0] instanceof ElementAtListMatcher || args[0] instanceof CollectionSearchMatcher)) {
                     description.appendText(" ");
                 }
-                SelfDescribing selfDescribing = (SelfDescribing) args[0];
+                final SelfDescribing selfDescribing = (SelfDescribing) args[0];
                 selfDescribing.describeTo((Description) proxy);
                 return proxy;
             }
@@ -226,5 +263,9 @@ public class BeanMatcher<T> extends BaseMatcher<T> {
         Matcher<R> getMatcher() {
             return matcher;
         }
+    }
+
+    public static <T> BeanMatcher<T> isBean(Class<T> clazz) {
+        return new BeanMatcher<>(clazz);
     }
 }
